api/src/kubernetes/templates/platform/envoy.yml
# Template for the TLS-enabled Envoy gateway configuration.
static_resources:
    listeners:
        - address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8443
          filter_chains:
              - transport_socket:
                    name: envoy.transport_sockets.tls
                    typed_config:
                        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                        common_tls_context:
                            tls_certificates:
                                - certificate_chain:
                                      filename: /etc/envoy-tls/tls.crt
                                  private_key:
                                      filename: /etc/envoy-tls/tls.key
                                  watched_directory:
                                      path: /etc/envoy-tls
                            validation_context:
                                trusted_ca:
                                    filename: /etc/envoy-tls/ca.crt
                        require_client_certificate: true
                filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          stat_prefix: longlink_gateway
                          request_timeout: 300s
                          common_http_protocol_options:
                              idle_timeout: 300s
                          route_config:
                              virtual_hosts:
                                  - name: applications
                                    domains:
                                        - '*'
                                    routes: $routes
                          http_filters:
                              - name: envoy.filters.http.router
                                typed_config:
                                    '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters: $clusters
